--- a/css/sass/_chapter3.sass
+++ b/css/sass/_chapter3.sass
@@ -160,6 +160,54 @@
       &.first
         margin-right: 10%
 
+  .confidence
+    @extend .blend-bottom
+
+    .form_question
+      font-size: 26px
+
+    .form_fields
+      padding: 1em 0
+
+      label
+        float: left
+        padding: 0 20px
+        text-align: center
+        width: 20%
+        height: 95px
+
+        input,
+        span
+          display: block
+          margin: 0 auto
+
+        span
+          line-height: 1.3
+          margin-top: .75em
+
+  .savings_confidence
+    @extend .blend-top
+
+    p
+      font-size: 18px
+
+    .nineteenninetyfive-very
+      width: 21%
+    .nineteenninetyfive-somewhat
+      width: 51%
+    .nineteenninetyfive-not_too
+      width: 19%
+    .nineteenninetyfive-not_at_all
+      width: 9%
+    .twothousandthirteen-very
+      width: 13%
+    .twothousandthirteen-somewhat
+      width: 38%
+    .twothousandthirteen-not_too
+      width: 21%
+    .twothousandthirteen-not_at_all
+      width: 28%
+
   .sheryl_garrett
     @extend .left
     @extend .blend-bottom
