Some context for the community data.

--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -204,9 +204,15 @@
     h2
       background: $medium
       color: #fff
-      font-size: 18px
+      font-size: 19px
       margin: 0
-      padding: 1em 0 .9em
+      padding: 1em .75em .9em
+
+    p
+      font-size: 18px
+      line-height: 1.4
+      text-align: center
+      text-transform: none
 
     table
       border-collapse: collapse
